2006-03-29  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Revert previous change until decodebin is fixed.

2006-03-29  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py: (SmartTimelineBin):
	Unlink from tees when pads are removed.
	Make the Rendering process more efficient.
	* pitivi/discoverer.py:
	Don't try to thumbnail non-video files.
	* pitivi/timeline.py:
	Remove ghostpads in the timeline when composition pads are
	removed.
	* pitivi/ui/viewer.py:
	Display a message if we couldn't start the rendering.

2006-03-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timeline.py:
	Also set the combobox to show the simple view default.

2006-03-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	Fix drag and drop data parsing even more.

2006-03-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Default window size is 800x600 instead of the cramped size that was
	previously set.
	* pitivi/ui/timeline.py:
	Timeline defaults to Simple View.

2006-03-28  Andy Wingo  <wingo@pobox.com>

	* configure.ac: Check for gnonlin and cairo using python and not
	pkg-config.

2006-03-24  Christian Schaller  <Christian@fluendo.com>

	* .cvsignore: add more generated files
	* pitivi/.cvsignore: add more generated files
	* pitivi/ui/.cvsignore: add more generated files

2006-03-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/objectfactory.py:
	typo fix.

2006-03-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Remove gnome-python dependency. If ever we need gnome-specific stuff, it
	should go in a pitivi plugin.
	* pitivi.spec.in:
	remove cruft

2006-03-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	* pitivi/check.py:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	* pitivi/project.py:
	Remove dependency on gnomevfs python module, and use the gstreamer uri
	utilities instead (gst.element_make_from_uri, gst.uri_get_protocol,
	gst.uri_get_location)
